--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "nodemon": "^1.19.1",
-    "open": "^6.4.0"
+    "open": "^6.4.0",
+    "winston": "^3.2.1"
   }
 }
