--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.17.1",
     "graphql": "^14.4.2",
     "graphql-depth-limit": "^1.1.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15"
   },
   "devDependencies": {
