--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --config jest.config.js --coverage",
-    "start": "node index.js"
+    "start": "node index.js",
+    "lint": "eslint -c .eslintrc config/**/*.js db/**/*.js errors/**/*.js modules/**/*.js lib/**/*.js app.js index.js server.js"
   },
   "repository": {
     "type": "git",
@@ -35,6 +36,7 @@
     "mongoose": "^5.7.1"
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
     "jest": "^24.9.0",
     "open": "^6.4.0",
     "winston": "^3.2.1"
