--- a/.eslintrc
+++ b/.eslintrc
@@ -54,7 +54,7 @@
             "off"
         ],
         "no-unused-vars": [
-            "off"
+            "error"
         ],
         "no-console": [
             "off"
@@ -74,11 +74,6 @@
         "space-infix-ops": "error",
         "eqeqeq": "error",
         "no-eq-null": "error",
-        "no-useless-catch": "off"
-    },
-    "globals": {
-        "moment": true,
-        "zE": true,
-        "_": true
+        "no-useless-catch": "error"
     }
 }
